feat: update application configuration; remove unused properties, add user repository, and adjust logging settings